@@ -322,9 +322,12 @@ namespace libtorrent
 		// this function will return false on failure.
 		// If it fails, it will also generate alerts describing
 		// the error. It will return true on success.
+		enum { listen_reuse_address = 1 };
+
 		bool listen_on(
 			std::pair<int, int> const& port_range
-			, const char* net_interface = 0);
+			, const char* net_interface = 0
+			, int flags = 0);
 
 		// returns the port we ended up listening on
 		unsigned short listen_port() const;
